# UEM

./: .gitignore  .travis.yml  README.md
MOA/Puzzle15/: .travis.yml  Heuristic1.py  Heuristic2.py  Heuristic3.py  Heuristic4.py  HeuristicSolver.py  Main.py  Puzzle15.py  Puzzle15AStarSolver.py  README.md  Setup.py
MOA/Puzzle15/Heuristic/: Heuristic1.py  (+5 more)
MOA/Tabuleiro-15-Pecas/: A-Estrela.py  Tabuleiro-15-Pecas.py
PAA/: ra62003.7z
PAA/UVA - 116 - Unidirectional TS/: TSPU.py  main.py  ra62003.docx
PC/memoria_compartilhada/: CMakeLists.txt  gera_resultados  makefile  memoria_compartilhada.c  sequencial.c
PC/memoria_compartilhada/Relatorio/: Relatorio.doc
PC/memoria_compartilhada/Relatorio/1/: resultados_memoria_compartilhada_100  resultados_memoria_compartilhada_200  resultados_memoria_compartilhada_400  resultados_sequencial_100  resultados_sequencial_200  resultados_sequencial_400
PC/memoria_compartilhada/Relatorio/2/: resultados_memoria_compartilhada_100  resultados_memoria_compartilhada_200  resultados_memoria_compartilhada_400  resultados_sequencial_100  resultados_sequencial_200  resultados_sequencial_400
PC/memoria_compartilhada/Relatorio/4/: resultados_memoria_compartilhada_100  resultados_memoria_compartilhada_200  resultados_memoria_compartilhada_400  resultados_sequencial_100  resultados_sequencial_200  resultados_sequencial_400
PC/memoria_compartilhada/docs/: Artigo.docx
PC/mpi_cc/: envia_arquivos  gera_resultados  makefile  supermercado.c  supermercado_sequencial.c
PPLF/Trabalho-2/: p1.pl  p2.pl  p3.pl  p4.pl
PPLF/reuni/: testador.py
(+63 files in other folders)
